ThamKhao/PPL/GiuaKy/5. Nguyên lý ngôn ngữ lập trình - Nguyễn Hứa Phùng (extract.me)/5. Nguyên lý ngôn ngữ lập trình - Nguyễn Hứa Phùng/Tham khảo/Slide _ Quiz/02. Phan tich van pham/3_Tutorial/solution_ex1/target/MPParser.py
# Generated from main/mp/parser/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys


class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'int'", "'float'", "'return'", "'{'", "'}'", "';'", 
                     "','", "'='", "'('", "')'", "'+'", "'-'", "'*'", "'/'" ]

    symbolicNames = [ "<INVALID>", "ID", "INTLIT", "FLOATLIT", "INT", "FLOAT", 
                      "RETURN", "LB", "RB", "SM", "CM", "EQ", "LP", "RP", 
                      "ADD", "SUB", "MUL", "DIV", "WS" ]

    RULE_program = 0
    RULE_many_decl = 1
    RULE_decl = 2
    RULE_var_decl = 3
    RULE_list_id = 4
    RULE_id_type = 5
    RULE_func_decl = 6
    RULE_para_decl = 7
    RULE_para_list = 8
    RULE_many_para = 9
    RULE_para = 10
    RULE_body = 11
    RULE_members = 12
    RULE_member = 13
    RULE_stmt = 14
    RULE_ass_stmt = 15
    RULE_call_stmt = 16
    RULE_return_stmt = 17
    RULE_list_exp = 18
    RULE_many_exp = 19
    RULE_exp = 20
    RULE_exp1 = 21
    RULE_exp2 = 22
    RULE_exp3 = 23

    ruleNames =  [ "program", "many_decl", "decl", "var_decl", "list_id", 
                   "id_type", "func_decl", "para_decl", "para_list", "many_para", 
                   "para", "body", "members", "member", "stmt", "ass_stmt", 
                   "call_stmt", "return_stmt", "list_exp", "many_exp", "exp", 
                   "exp1", "exp2", "exp3" ]

    EOF = Token.EOF
    ID=1
    INTLIT=2
    FLOATLIT=3
    INT=4
    FLOAT=5
    RETURN=6
    LB=7
    RB=8
    SM=9
    CM=10
    EQ=11
    LP=12
    RP=13
    ADD=14
    SUB=15
    MUL=16
    DIV=17
    WS=18

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def many_decl(self):
            return self.getTypedRuleContext(MPParser.Many_declContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.many_decl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Many_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MPParser.DeclContext,0)


        def many_decl(self):
            return self.getTypedRuleContext(MPParser.Many_declContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_many_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMany_decl" ):
                return visitor.visitMany_decl(self)
            else:
                return visitor.visitChildren(self)




    def many_decl(self):

        localctx = MPParser.Many_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_many_decl)
        try:
            self.state = 54
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.decl()
                self.state = 51
                self.many_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(MPParser.Var_declContext,0)


        def func_decl(self):
            return self.getTypedRuleContext(MPParser.Func_declContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MPParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 58
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.var_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.func_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_type(self):
            return self.getTypedRuleContext(MPParser.Id_typeContext,0)


        def list_id(self):
            return self.getTypedRuleContext(MPParser.List_idContext,0)


        def SM(self):
            return self.getToken(MPParser.SM, 0)

        def getRuleIndex(self):
            return MPParser.RULE_var_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = MPParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.id_type()
            self.state = 61
            self.list_id()
            self.state = 62
            self.match(MPParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class List_idContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def CM(self):
            return self.getToken(MPParser.CM, 0)

        def list_id(self):
            return self.getTypedRuleContext(MPParser.List_idContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_list_id

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_id" ):
                return visitor.visitList_id(self)
            else:
                return visitor.visitChildren(self)




    def list_id(self):

        localctx = MPParser.List_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_list_id)
        try:
            self.state = 68
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.match(MPParser.ID)
                self.state = 65
                self.match(MPParser.CM)
                self.state = 66
                self.list_id()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.match(MPParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Id_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(MPParser.INT, 0)

        def FLOAT(self):
            return self.getToken(MPParser.FLOAT, 0)

        def getRuleIndex(self):
            return MPParser.RULE_id_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_type" ):
                return visitor.visitId_type(self)
            else:
                return visitor.visitChildren(self)




    def id_type(self):

        localctx = MPParser.Id_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_id_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            _la = self._input.LA(1)
            if not(_la==MPParser.INT or _la==MPParser.FLOAT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_type(self):
            return self.getTypedRuleContext(MPParser.Id_typeContext,0)


        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def para_decl(self):
            return self.getTypedRuleContext(MPParser.Para_declContext,0)


        def body(self):
            return self.getTypedRuleContext(MPParser.BodyContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_func_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_decl" ):
                return visitor.visitFunc_decl(self)
            else:
                return visitor.visitChildren(self)




    def func_decl(self):

        localctx = MPParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_func_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.id_type()
            self.state = 73
            self.match(MPParser.ID)
            self.state = 74
            self.para_decl()
            self.state = 75
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Para_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(MPParser.LP, 0)

        def para_list(self):
            return self.getTypedRuleContext(MPParser.Para_listContext,0)


        def RP(self):
            return self.getToken(MPParser.RP, 0)

        def getRuleIndex(self):
            return MPParser.RULE_para_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPara_decl" ):
                return visitor.visitPara_decl(self)
            else:
                return visitor.visitChildren(self)




    def para_decl(self):

        localctx = MPParser.Para_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_para_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(MPParser.LP)
            self.state = 78
            self.para_list()
            self.state = 79
            self.match(MPParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Para_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def para(self):
            return self.getTypedRuleContext(MPParser.ParaContext,0)


        def many_para(self):
            return self.getTypedRuleContext(MPParser.Many_paraContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_para_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPara_list" ):
                return visitor.visitPara_list(self)
            else:
                return visitor.visitChildren(self)




    def para_list(self):

        localctx = MPParser.Para_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_para_list)
        try:
            self.state = 85
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.INT, MPParser.FLOAT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.para()
                self.state = 82
                self.many_para()
                pass
            elif token in [MPParser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Many_paraContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self):
            return self.getToken(MPParser.CM, 0)

        def para(self):
            return self.getTypedRuleContext(MPParser.ParaContext,0)


        def many_para(self):
            return self.getTypedRuleContext(MPParser.Many_paraContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_many_para

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMany_para" ):
                return visitor.visitMany_para(self)
            else:
                return visitor.visitChildren(self)




    def many_para(self):

        localctx = MPParser.Many_paraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_many_para)
        try:
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.CM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.match(MPParser.CM)
                self.state = 88
                self.para()
                self.state = 89
                self.many_para()
                pass
            elif token in [MPParser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_type(self):
            return self.getTypedRuleContext(MPParser.Id_typeContext,0)


        def list_id(self):
            return self.getTypedRuleContext(MPParser.List_idContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_para

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPara" ):
                return visitor.visitPara(self)
            else:
                return visitor.visitChildren(self)




    def para(self):

        localctx = MPParser.ParaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_para)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.id_type()
            self.state = 95
            self.list_id()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def members(self):
            return self.getTypedRuleContext(MPParser.MembersContext,0)


        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def getRuleIndex(self):
            return MPParser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = MPParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(MPParser.LB)
            self.state = 98
            self.members()
            self.state = 99
            self.match(MPParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MembersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self):
            return self.getTypedRuleContext(MPParser.MemberContext,0)


        def members(self):
            return self.getTypedRuleContext(MPParser.MembersContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_members

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMembers" ):
                return visitor.visitMembers(self)
            else:
                return visitor.visitChildren(self)




    def members(self):

        localctx = MPParser.MembersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_members)
        try:
            self.state = 105
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.ID, MPParser.INT, MPParser.FLOAT, MPParser.RETURN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.member()
                self.state = 102
                self.members()
                pass
            elif token in [MPParser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MemberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(MPParser.StmtContext,0)


        def var_decl(self):
            return self.getTypedRuleContext(MPParser.Var_declContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_member

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMember" ):
                return visitor.visitMember(self)
            else:
                return visitor.visitChildren(self)




    def member(self):

        localctx = MPParser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_member)
        try:
            self.state = 109
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.ID, MPParser.RETURN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.stmt()
                pass
            elif token in [MPParser.INT, MPParser.FLOAT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.var_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ass_stmt(self):
            return self.getTypedRuleContext(MPParser.Ass_stmtContext,0)


        def call_stmt(self):
            return self.getTypedRuleContext(MPParser.Call_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(MPParser.Return_stmtContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = MPParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_stmt)
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.ass_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.call_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 113
                self.return_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Ass_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def EQ(self):
            return self.getToken(MPParser.EQ, 0)

        def exp(self):
            return self.getTypedRuleContext(MPParser.ExpContext,0)


        def SM(self):
            return self.getToken(MPParser.SM, 0)

        def getRuleIndex(self):
            return MPParser.RULE_ass_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAss_stmt" ):
                return visitor.visitAss_stmt(self)
            else:
                return visitor.visitChildren(self)




    def ass_stmt(self):

        localctx = MPParser.Ass_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_ass_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(MPParser.ID)
            self.state = 117
            self.match(MPParser.EQ)
            self.state = 118
            self.exp()
            self.state = 119
            self.match(MPParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Call_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LP(self):
            return self.getToken(MPParser.LP, 0)

        def list_exp(self):
            return self.getTypedRuleContext(MPParser.List_expContext,0)


        def RP(self):
            return self.getToken(MPParser.RP, 0)

        def SM(self):
            return self.getToken(MPParser.SM, 0)

        def getRuleIndex(self):
            return MPParser.RULE_call_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall_stmt" ):
                return visitor.visitCall_stmt(self)
            else:
                return visitor.visitChildren(self)




    def call_stmt(self):

        localctx = MPParser.Call_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_call_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(MPParser.ID)
            self.state = 122
            self.match(MPParser.LP)
            self.state = 123
            self.list_exp()
            self.state = 124
            self.match(MPParser.RP)
            self.state = 125
            self.match(MPParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Return_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(MPParser.RETURN, 0)

        def exp(self):
            return self.getTypedRuleContext(MPParser.ExpContext,0)


        def SM(self):
            return self.getToken(MPParser.SM, 0)

        def getRuleIndex(self):
            return MPParser.RULE_return_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_stmt" ):
                return visitor.visitReturn_stmt(self)
            else:
                return visitor.visitChildren(self)




    def return_stmt(self):

        localctx = MPParser.Return_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_return_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(MPParser.RETURN)
            self.state = 128
            self.exp()
            self.state = 129
            self.match(MPParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class List_expContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self):
            return self.getTypedRuleContext(MPParser.ExpContext,0)


        def many_exp(self):
            return self.getTypedRuleContext(MPParser.Many_expContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_list_exp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_exp" ):
                return visitor.visitList_exp(self)
            else:
                return visitor.visitChildren(self)




    def list_exp(self):

        localctx = MPParser.List_expContext(self, self._ctx, self.state)
        self.enterRule(localctx, 36, self.RULE_list_exp)
        try:
            self.state = 135
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.ID, MPParser.INTLIT, MPParser.FLOATLIT, MPParser.LP]:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.exp()
                self.state = 132
                self.many_exp()
                pass
            elif token in [MPParser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Many_expContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self):
            return self.getToken(MPParser.CM, 0)

        def exp(self):
            return self.getTypedRuleContext(MPParser.ExpContext,0)


        def many_exp(self):
            return self.getTypedRuleContext(MPParser.Many_expContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_many_exp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMany_exp" ):
                return visitor.visitMany_exp(self)
            else:
                return visitor.visitChildren(self)




    def many_exp(self):

        localctx = MPParser.Many_expContext(self, self._ctx, self.state)
        self.enterRule(localctx, 38, self.RULE_many_exp)
        try:
            self.state = 142
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.CM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.match(MPParser.CM)
                self.state = 138
                self.exp()
                self.state = 139
                self.many_exp()
                pass
            elif token in [MPParser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp1(self):
            return self.getTypedRuleContext(MPParser.Exp1Context,0)


        def ADD(self):
            return self.getToken(MPParser.ADD, 0)

        def exp(self):
            return self.getTypedRuleContext(MPParser.ExpContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_exp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp" ):
                return visitor.visitExp(self)
            else:
                return visitor.visitChildren(self)




    def exp(self):

        localctx = MPParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 40, self.RULE_exp)
        try:
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.exp1()
                self.state = 145
                self.match(MPParser.ADD)
                self.state = 146
                self.exp()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.exp1()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Exp1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp2(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Exp2Context)
            else:
                return self.getTypedRuleContext(MPParser.Exp2Context,i)


        def SUB(self):
            return self.getToken(MPParser.SUB, 0)

        def getRuleIndex(self):
            return MPParser.RULE_exp1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp1" ):
                return visitor.visitExp1(self)
            else:
                return visitor.visitChildren(self)




    def exp1(self):

        localctx = MPParser.Exp1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 42, self.RULE_exp1)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.exp2(0)
                self.state = 152
                self.match(MPParser.SUB)
                self.state = 153
                self.exp2(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.exp2(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Exp2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp3(self):
            return self.getTypedRuleContext(MPParser.Exp3Context,0)


        def exp2(self):
            return self.getTypedRuleContext(MPParser.Exp2Context,0)


